Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98418

private field 'm_lastCpuUsage' is not used [-Werror,-Wunused-private-field]

    XMLWordPrintable

Details

    • f245d6bd99bda23e1e7b2ecc7f3731ea440afbad (qt/qtapplicationmanager/6.2.2) 3d39274bed (qt/qtapplicationmanager/6.2.3) 3d39274bed (qt/qtapplicationmanager/6.2.4) 1901a9d468 (qt/qtapplicationmanager/6.3.0)

    Description

      agent:2021/11/18 08:47:43 build.go:394: In file included from /Users/qt/work/qt/qtapplicationmanager/src/monitor-lib/processreader.cpp:33:
      agent:2021/11/18 08:47:43 build.go:394: /Users/qt/work/qt/qtapplicationmanager/src/monitor-lib/AppManMonitorPrivate_autogen/include/../../processreader.h:89:13: error: private field 'm_lastCpuUsage' is not used [-Werror,-Wunused-private-field]
      agent:2021/11/18 08:47:43 build.go:394:     quint64 m_lastCpuUsage = 0.0;
      agent:2021/11/18 08:47:43 build.go:394:             ^
      agent:2021/11/18 08:47:43 build.go:394: 1 error generated.
      

      Build log: https://testresults.qt.io/logs/qt/qtapplicationmanager/9b0419e8d8b0bcd54abf628f94c9d37e7ea0fa0b/MacOSMacOS_12x86_64MacOSMacOS_12x86_64-arm64Clangqtci-macos-12-x86_64-102-a57b7cSccache_WarningsAreErrors/0b5da3821037ff909cbc61f09c4b4b550f32ec1a/build_1637239031/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtapplicationmanager/tasks/1637238951

      Tested changes (refs/builds/qtci/dev/1637224241):
      https://codereview.qt-project.org/c/qt/qtapplicationmanager/+/380926/3 Update dependencies on 'dev' in qt/qtapplicationmanager

      Attachments

        For Gerrit Dashboard: QTBUG-98418
        # Subject Branch Project Status CR V

        Activity

          People

            rgriebl Robert Griebl
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes