Fix unused member warning on non-Linux platforms

Change-Id: I234cfcf0c913a7548a405d8720805a43f32c1101
Fixes: QTBUG-98418
Reviewed-by: Dominik Holland <dominik.holland@qt.io>
(cherry picked from commit 1901a9d4685d1e628402566adcd348a71c5739a7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>